# KnowledgeBase_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: agent.py  attachments.py  chunking.py  config.py  db.py  documents.py  embeddings.py  extract.py  ingest.py  llm.py  main.py  parsing.py  retrieval.py  schemas.py  sessions.py  store.py
dist-jay/: .env.example  docker-compose.yml
tools/updater/: go.mod  main.go
web/: app.js  index.html  questions.csv  styles.css
web/js/: app.js
