[project]
name = "agent-vector"
version = "0.1.0"
description = "Semantic ingestion + retrieval agent (FastAPI, pgvector, OpenAI embeddings + LLM)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3.6",
    "openai>=1.54",
    "tiktoken>=0.8",
    "python-multipart>=0.0.12",
    "markitdown[pdf,docx,pptx,xlsx]>=0.1.1",
]

[tool.uv]
package = false
