[project]
name = "invoice-agent"
version = "0.1.0"
description = "Invoice analytics agent — extract invoices to markdown, query and chart them with an LLM tool agent (FastAPI, OpenAI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "openai>=1.54",
    "python-multipart>=0.0.12",
    "markitdown[pdf,docx,pptx,xlsx]>=0.1.1",
    "pyyaml>=6.0",
]

[tool.uv]
package = false
